--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#000" />
 
-    <title>[[.AppTitle]]</title>
+    <title>EuroSchool(Discover Yourself)</title>
 
     <base href="[[.AppSubUrl]]/" />
 
@@ -30,8 +30,8 @@
       crossorigin
     />
 
-    <link rel="icon" type="image/png" href="[[.FavIcon]]" />
-    <link rel="apple-touch-icon" sizes="180x180" href="[[.AppleTouchIcon]]" />
+    <link rel="icon" type="image/png" href="https://lil-grafana.s3.ap-south-1.amazonaws.com/resources/favicon-96x96.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://lil-grafana.s3.ap-south-1.amazonaws.com/resources/apple-icon-114x114.png" />
     <link rel="mask-icon" href="public/img/grafana_mask_icon.svg" color="#F05A28" />
 
     <link rel="stylesheet" href="public/build/grafana.[[ .Theme ]].<%= webpack.hash %>.css" />
